--- a/4-styles.css
+++ b/4-styles.css
@@ -408,13 +408,13 @@ p {
 .logo {
     float: left;
     padding: 50px;
-    margin-left: 195px;
+    margin-left: 15%;
 }
 
 .menu-bar {
     float: right;
     margin-top: 45px;
-    padding-right: 195px;
+    padding-right: 15%;
     
 }
 
@@ -707,7 +707,7 @@ footer {
 
 .footer-container .logo {
     padding-top: 90px;
-    margin-left: 150px;
+    margin-left: 15%;
 }
 
 .footer-container li {
@@ -727,7 +727,7 @@ path {
 
 .social-nav {
     padding-top: 80px;
-    margin-right: 150px;
+    margin-right: 15%;
 }
 
 ul li {
